gccida/c0/do_SUBST
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_SUBST/src/combine.c:889:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)oldval)] == MODE_INT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_SUBST/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_SUBST/src/combine.c:893:46: error: use of undeclared identifier 'machine_mode'
if ( rtwint != trunc_int_for_mode( rtwint, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)oldval)) ) 
                                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_SUBST/src/combine.c:893:61: error: expected expression
if ( rtwint != trunc_int_for_mode( rtwint, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)oldval)) ) 
                                                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_SUBST/src/combine.c:901:6: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
if ( undobuf_0.frees ) 
     ^~~~~~~~~
     undobuf
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_SUBST/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_SUBST/src/combine.c:903:7: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
buf = undobuf_0.frees; 
      ^~~~~~~~~
      undobuf
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_SUBST/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_SUBST/src/combine.c:904:1: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
undobuf_0.frees = undobuf_0.frees->next; 
^~~~~~~~~
undobuf
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_SUBST/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_SUBST/src/combine.c:904:19: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
undobuf_0.frees = undobuf_0.frees->next; 
                  ^~~~~~~~~
                  undobuf
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_SUBST/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_SUBST/src/combine.c:914:13: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
buf->next = undobuf_0.undos; 
            ^~~~~~~~~
            undobuf
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_SUBST/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_SUBST/src/combine.c:915:1: error: use of undeclared identifier 'undobuf_0'; did you mean 'undobuf'?
undobuf_0.undos = buf; 
^~~~~~~~~
undobuf
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_SUBST/src/combine.c:334:23: note: 'undobuf' declared here
static struct undobuf undobuf;
                      ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_SUBST/src/obj/combine.o] Error 1
